# jd-compare

./: ATTRIBUTION.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: level_a.txt  level_b.txt
src/jd_compare/: cli.py  compare.py
src/jd_compare/posting/: analyze.py  flags.py  rubric.py
tests/: test_compare.py
